Resolved error in paths when published

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: main
     alt="A payment card being presented to a chip & pin machine" width="100%" height="80vh" %}
 
 <div class="o-container">
-    <div class="o-container--content px-2">
+    <div class="o-container--content px-2 py-4">
         <article class="article--{{ page.theme }}">
             {{ content }}
         </article>
