--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,7 +9,7 @@
         <meta name="author" content="{{ page.author }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <base href="{{ site.url }}{{ site.baseurl }}">
-        <link rel="stylesheet" title="default" href="{{ site.url }}{{ site.baseurl }}assets/css/styles.css">
+        <link rel="stylesheet" title="default" href="{{ site.url }}{{ site.baseurl }}/assets/css/styles.css">
     </head>
     <body>
         {{ content }}
