--- a/_includes/c-navbar.html
+++ b/_includes/c-navbar.html
@@ -28,7 +28,7 @@
             {% endfor %}
             
             <li class="c-navbar__menu-item c-navbar__menu-cta fs-90">
-                <a class="c-navbar__menu-button u-theme-primary--{{ theme }}-inverse" href="/demo/">Get a demo</a>
+                <a class="c-navbar__menu-button u-theme-primary--{{ theme }}-inverse" href="/demo">Get a demo</a>
             </li>
             
         </ul>
