Added a margin for better spacing

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ layout: main
             {{ content }}
         </article>
 
-        <aside class="lflex">
+        <aside class="lflex mt-6">
             <div class="w-100 lw-35 lflexrow">
                 <h1>How can you get involved?</h1>
             </div>
