--- a/_includes/c-navbar.html
+++ b/_includes/c-navbar.html
@@ -20,7 +20,7 @@
             {% for indexPage in pagesList %}
                 
                 <li class="c-navbar__menu-item fs-90">
-                    <a class="c-navbar__menu-link u-theme-primary--{{ theme }}" href="{{ indexPage.url }}">
+                    <a class="c-navbar__menu-link u-theme-primary--{{ theme }}" href="{{ indexPage.url | relative_url }}">
                         {{ indexPage.title }}
                     </a>
                 </li>
@@ -28,7 +28,7 @@
             {% endfor %}
             
             <li class="c-navbar__menu-item c-navbar__menu-cta fs-90">
-                <a class="c-navbar__menu-button u-theme-primary--{{ theme }}-inverse" href="/demo">Get a demo</a>
+                <a class="c-navbar__menu-button u-theme-primary--{{ theme }}-inverse" href="{{ '/demo' | relative_url }}">Get a demo</a>
             </li>
             
         </ul>
