--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,8 +8,7 @@
         <meta name="keywords" content="{{ page.keywords }}">
         <meta name="author" content="{{ page.author }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <base href="{{ site.url }}{{ site.baseurl }}">
-        <link rel="stylesheet" title="default" href="{{ "assets/css/styles.css" | relative_url }}">
+        <link rel="stylesheet" title="default" href="{{ 'assets/css/styles.css' | relative_url }}">
     </head>
     <body>
         {{ content }}
