Updated top level nav structure

--- a/_sass/settings/_settings.global.scss
+++ b/_sass/settings/_settings.global.scss
@@ -34,16 +34,6 @@ $themes: (
         surface: #000000,
         onSurface: #ffffff
     ),
-    "partners": (
-        primary: #3259b7,
-        onPrimary: #ffffff,
-        secondary: #333333,
-        onSecondary: #ffffff,
-        background: #ffffff,
-        onBackground: #000000,
-        surface: #000000,
-        onSurface: #ffffff
-    ),
     "story": (
         primary: #eb823c,
         onPrimary: #ffffff,
@@ -54,8 +44,28 @@ $themes: (
         surface: #000000,
         onSurface: #ffffff
     ),
-    "team": (
+    "using": (
+        primary: #3259b7,
+        onPrimary: #ffffff,
+        secondary: #333333,
+        onSecondary: #ffffff,
+        background: #ffffff,
+        onBackground: #000000,
+        surface: #000000,
+        onSurface: #ffffff
+    ),
+    "works": (
         primary: #428d52,
+        onPrimary: #ffffff,
+        secondary: #333333,
+        onSecondary: #ffffff,
+        background: #ffffff,
+        onBackground: #000000,
+        surface: #000000,
+        onSurface: #ffffff
+    ),
+    "mou": (
+        primary: #f5d205,
         onPrimary: #ffffff,
         secondary: #333333,
         onSecondary: #ffffff,
