--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{{ page.title }}</title>
+        <title>{{ site.title }} {{ page.title }}</title>
         <meta http-equiv="content-type" content="text/html" charset="UTF-8">
         <meta http-equiv="default-style" content="default">
         <meta name="description" content="{{ page.description}}">
