--- a/_sass/settings/_settings.global.scss
+++ b/_sass/settings/_settings.global.scss
@@ -74,7 +74,7 @@ $themes: (
         surface: #000000,
         onSurface: #ffffff
     ),
-    "contact": (
+    "contacts": (
         primary: #b92383,
         onPrimary: #ffffff,
         secondary: #333333,
