Tweaked the section colours a little

--- a/_sass/settings/_settings.global.scss
+++ b/_sass/settings/_settings.global.scss
@@ -35,7 +35,7 @@ $themes: (
         onSurface: #ffffff
     ),
     "features": (
-        primary: #eb823c,
+        primary: #fa6f50,
         onPrimary: #ffffff,
         secondary: #333333,
         onSecondary: #ffffff,
@@ -45,7 +45,7 @@ $themes: (
         onSurface: #ffffff
     ),
     "roadmap": (
-        primary: #FFCC00,
+        primary: #b92383,
         onPrimary: #ffffff,
         secondary: #333333,
         onSecondary: #ffffff,
@@ -55,7 +55,7 @@ $themes: (
         onSurface: #ffffff
     ),
     "documentation": (
-        primary: #3259b7,
+        primary: #467edd,
         onPrimary: #ffffff,
         secondary: #333333,
         onSecondary: #ffffff,
@@ -75,7 +75,7 @@ $themes: (
         onSurface: #ffffff
     ),
     "contacts": (
-        primary: #b92383,
+        primary: #7d47e7,
         onPrimary: #ffffff,
         secondary: #333333,
         onSecondary: #ffffff,
