--- a/_sass/settings/_settings.global.scss
+++ b/_sass/settings/_settings.global.scss
@@ -44,7 +44,7 @@ $themes: (
         surface: #000000,
         onSurface: #ffffff
     ),
-    "roadmap": (
+    "backlog": (
         primary: #b92383,
         onPrimary: #ffffff,
         secondary: #333333,
@@ -64,7 +64,7 @@ $themes: (
         surface: #000000,
         onSurface: #ffffff
     ),
-    "history": (
+    "community": (
         primary: #428d52,
         onPrimary: #ffffff,
         secondary: #333333,
