Added list styling

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -35,7 +35,7 @@
 /* Elements */
 @import "elements/elements.page";
 @import "elements/elements.headings";
-//@import "elements/elements.images";
+@import "elements/elements.lists";
 //@import "elements/elements.tables";
 
 
