Fixed some a11y issues

--- a/_includes/c-navbar.html
+++ b/_includes/c-navbar.html
@@ -9,6 +9,7 @@
     <!-- Menu toggle -->
     <input class="c-navbar__checkbox" type="checkbox" id="navbarCheckbox">
     <label class="c-navbar__toggle clearfix" for="navbarCheckbox">
+        <span class="hidden">Menu toggle</span>
         <span class="c-navbar__hamburger c-navbar__hamburger-bun u-theme-primary--{{ theme }}-inverse"></span>
         <span class="c-navbar__hamburger c-navbar__hamburger-meat u-theme-primary--{{ theme }}-inverse"></span>
     </label>
