--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -75,5 +75,6 @@
 @import 'utilities/utilities.flex';
 @import 'utilities/utilities.font-sizes';
 @import 'utilities/utilities.spacing';
+@import 'utilities/utilities.visibility';
 @import 'utilities/utilities.widths';
 //@import "utilities/utilities.clearfix";
