--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>{{ site.title }} {{ page.navTitle | default: page.title }}</title>
         <meta http-equiv="content-type" content="text/html" charset="UTF-8">
