Updated logo link for a11y

--- a/_includes/c-navbar.html
+++ b/_includes/c-navbar.html
@@ -4,7 +4,7 @@
 <nav class="c-navbar">
 
     <!-- Brand -->
-    <a class="c-navbar__brand u-theme-primary--{{ theme }}" href="{{ '/' | relative_url }}">LocalGov IMS</a>
+    <a class="c-navbar__brand u-theme-primary--{{ theme }}" href="{{ '/index.html' | relative_url }}">LocalGov IMS</a>
     
     <!-- Menu toggle -->
     <input class="c-navbar__checkbox" type="checkbox" id="navbarCheckbox">
