Added aria role for doc-subtitle when present

--- a/_includes/c-hero.html
+++ b/_includes/c-hero.html
@@ -6,6 +6,6 @@
 <div class="p-2 pb-6 u-theme-primary--{{ theme }}">
     <h1 class="c-hero__title--{{ mode }}">{{ title }}</h1>
     {% if subtitle != "" %}
-        <p class="c-hero__subtitle--{{ mode }}">{{ subtitle }}</p>
+        <p role="doc-subtitle" class="c-hero__subtitle--{{ mode }}">{{ subtitle }}</p>
     {% endif %}
 </div>
