Fixed colour issue on story section

--- a/_sass/settings/_settings.global.scss
+++ b/_sass/settings/_settings.global.scss
@@ -64,7 +64,7 @@ $themes: (
         surface: #000000,
         onSurface: #ffffff
     ),
-    "community": (
+    "story": (
         primary: #428d52,
         onPrimary: #ffffff,
         secondary: #333333,
