--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-205373365-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-205373365-1');
+        </script>
         <title>{{ site.title }} {{ page.navTitle | default: page.title }}</title>
         <meta http-equiv="content-type" content="text/html" charset="UTF-8">
         <meta http-equiv="default-style" content="default">
